plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
	id 'org.openapi.generator' version '7.13.0'
}

group = 'com.fantasy'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Error tracking: ERROR-level logs are forwarded to Sentry (see logback-spring.xml).
	// Active only when SENTRY_DSN is set (prod/staging); inert locally and in CI/tests.
	implementation 'io.sentry:sentry-logback:8.16.0'

	// Configuration Properties Metadata
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Google ID token verification (Nimbus JWT decoder against Google's JWKS)
	implementation 'org.springframework.security:spring-security-oauth2-jose'

	// OpenAPI / Swagger UI
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.wiremock:wiremock-standalone:3.12.1'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	testLogging {
		events 'failed'
		exceptionFormat = 'full'
	}
	// Forward -DupdateSpec=true to the test JVM so OpenApiSpecSnapshotTest can
	// rewrite specs/bff-openapi.yaml instead of asserting against it.
	systemProperty 'updateSpec', System.getProperty('updateSpec', 'false')
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
	}
}

// Only build the executable Spring Boot jar (skip the non-runnable "-plain" jar)
// so the Docker image can copy build/libs/*.jar unambiguously.
tasks.named('jar') {
	enabled = false
}

// Generate a typed client from the committed db-service OpenAPI spec.
// Re-run after updating specs/fantasy-db-service-openapi.yaml.
// We only consume the generated *model* classes (com.fantasy.bff.generated.db.model);
// the rest compiles as a self-consistent unit. The 'native' library builds on the
// JDK's java.net.http client + Jackson (no Spring), so it is unaffected by the
// Spring Framework 7 API changes that break the generator's Spring-based templates.
openApiGenerate {
	generatorName = 'java'
	library = 'native'
	// Pass a file: URI (not a raw path) so the swagger parser resolves internal
	// $refs correctly on Windows too — a bare "C:\..." path makes it read the
	// drive letter as a URI scheme and fail.
	inputSpec = file("specs/fantasy-db-service-openapi.yaml").toURI().toString()
	outputDir = "${buildDir}/generated/openapi/db-service".toString()
	modelPackage = 'com.fantasy.bff.generated.db.model'
	apiPackage = 'com.fantasy.bff.generated.db.api'
	invokerPackage = 'com.fantasy.bff.generated.db'
	generateApiTests = false
	generateModelTests = false
	generateApiDocumentation = false
	generateModelDocumentation = false
	configOptions = [
		openApiNullable: 'false',
		useJakartaEe: 'true',
		useBeanValidation: 'true',
	]
}

// Same pattern for the yahoo-service spec. Re-run after updating
// specs/fantasy-yahoo-service-openapi.yaml.
tasks.register('generateYahooClient', org.openapitools.generator.gradle.plugin.tasks.GenerateTask) {
	generatorName = 'java'
	library = 'native'
	inputSpec = file("specs/fantasy-yahoo-service-openapi.yaml").toURI().toString()
	outputDir = "${buildDir}/generated/openapi/yahoo-service".toString()
	modelPackage = 'com.fantasy.bff.generated.yahoo.model'
	apiPackage = 'com.fantasy.bff.generated.yahoo.api'
	invokerPackage = 'com.fantasy.bff.generated.yahoo'
	generateApiTests = false
	generateModelTests = false
	generateApiDocumentation = false
	generateModelDocumentation = false
	configOptions = [
		openApiNullable: 'false',
		useJakartaEe: 'true',
		useBeanValidation: 'true',
	]
}

sourceSets {
	main {
		java {
			srcDir "${buildDir}/generated/openapi/db-service/src/main/java"
			srcDir "${buildDir}/generated/openapi/yahoo-service/src/main/java"
		}
	}
}

compileJava.dependsOn tasks.openApiGenerate
compileJava.dependsOn tasks.generateYahooClient
